# dr-web-test

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
cmake/extern-cmake-scripts/: alglib-link.cmake
include/dr-web-test/: cubicspline.h  datastructs.h  interpolationwidget.h  interpolator.h  lagrangepoly.h  linearinterp.h  mainwindow.h
src/: CMakeLists.txt  cubicspline.cpp  interpolationwidget.cpp  interpolationwidget.ui  lagrangepoly.cpp  linearinterp.cpp  mainwindow.cpp  mainwindow.ui
tests/: CMakeLists.txt  test_main.cpp
